# AI-4-Interview

./: CMakeLists.txt  README.md  main.cpp
AI/: conv2D.py  nms.cpp  nms.py
AI/cpp/: conv2d.cpp  nms.cpp
AI/python/: nms.py
AI/python/model_press/: NAS.py  pruning.py  quant.py
array/: array.cpp  array.h
backTracing/: back_tracing.cpp  back_tracing.h
basic/: bacis_algorithm.cpp  basic_algorithm.h
dynamicProgramming/: dp.cpp  dp.h
linkList/: link_list.cpp  link_list.h
mathAlgorithm/: math_algorithm.cpp  math_algorithm.h
stackQueen/: stack_queen.cpp  stack_queen.h
tree/: tree.cpp  tree.h
